# PretopEngine

./: CMakeLists.txt  build.py  building.md  gen_sources.py  readme.md  sources.cmake
Source/: PrintStringView.cpp  PrintStringView.hpp  main.cpp
Source/Asset/: AssetHandle.hpp  AssetLoader.hpp  AssetLoaderFactory.cpp  AssetLoaderFactory.hpp  AssetManager.cpp  AssetManager.hpp  AssetManagerFactory.cpp  AssetManagerFactory.hpp  AssetTypes.hpp  LoadGlb.cpp  LoadGlb.hpp  ModelParseError.hpp  NATIVE_AssetLoader.cpp  NATIVE_AssetLoader.hpp  Task.hpp  WEB_AssetLoader.cpp  WEB_AssetLoader.hpp
Source/Core/: Assert.hpp  Completion.hpp  Handle.hpp  Job.hpp  JobSystem.cpp  JobSystem.hpp  Logger.hpp  Status.hpp
Source/Demos/: LoadModel.cpp  LoadModel.hpp
Source/Limits/: Limits.hpp
Source/Math/: CeilToBufferOffset.cpp  CeilToBufferOffset.hpp  Constants.hpp  Euler.cpp  Euler.hpp
Source/Math/Linalg/: Mat2x2.cpp  Mat2x2.hpp  Mat3x3.cpp  Mat3x3.hpp  Mat4x4.cpp  Mat4x4.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
Source/RHI/: Adapter.cpp  Adapter.hpp  Application.cpp  Application.hpp  BindGroup.cpp  BindGroup.hpp  BindingLayout.cpp  BindingLayout.hpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  LayoutType.hpp  Pipeline.cpp  Pipeline.hpp  RenderPassCommand.cpp  RenderPassCommand.hpp  RenderPassEncoder.cpp  RenderPassEncoder.hpp  Shader.cpp  Shader.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexLayout.cpp  VertexLayout.hpp
Source/Window/: NATIVE_GlfwWindow.cpp  NATIVE_GlfwWindow.hpp  WEB_CanvasWindow.cpp  WEB_CanvasWindow.hpp  Window.hpp  WindowFactory.cpp  WindowFactory.hpp
assets/: shader.wgsl
assets/shaders/: shader.wgsl
scripts/windows/: build-dawn.bat  build-web.bat  build.bat  run-web.bat  run.bat  setup.bat  test.bat
src/: PrintStringView.cpp  application.cpp  application.hpp  main.cpp
src/Asset/: AssetLoader.hpp  AssetLoaderFactory.cpp  AssetLoaderFactory.hpp  LoadGlb.cpp  LoadGlb.hpp  NATIVE_AssetLoader.hpp  WEB_AssetLoader.cpp  WEB_AssetLoader.hpp
src/Demos/: LoadModel.cpp  LoadModel.hpp
src/Limits/: Limits.hpp
src/Math/: CeilToBufferOffset.cpp  Constants.hpp  Euler.hpp
src/Math/Linalg/: Mat3x3.hpp  Mat4x4.cpp  Vec4.cpp
src/RHI/: Adapter.cpp  Adapter.hpp  Application.cpp  Application.hpp  BindGroup.hpp  CommandBuffer.hpp  Instance.cpp  Pipeline.hpp  RenderPassEncoder.cpp  Shader.cpp  Shader.hpp  VertexLayout.hpp
src/Rendering/: BindGroup.cpp  BindingLayout.cpp  BindingLayout.hpp  Buffer.hpp  CommandBuffer.cpp  Device.cpp  Pipeline.cpp  RenderPassCommand.cpp  RenderPassCommand.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/Window/: NATIVE_GlfwWindow.hpp  WindowFactory.cpp
src/application/: appAdapter.cpp  appAdapter.hpp  appBindGroup.cpp  appBindGroup.hpp  appBindingLayout.cpp  appBindingLayout.hpp  appBuffer.hpp  appCommand.cpp  appCommand.hpp  appCommandBuffer.cpp  appCommandBuffer.hpp  appDevice.cpp  appDevice.hpp  appIndexBuffer.hpp  appInstance.cpp  appInstance.hpp  appPipeline.cpp  appPipeline.hpp  appRenderPassCommand.cpp  appRenderPassCommand.hpp  appRenderPassEncoder.cpp  appRenderPassEncoder.hpp  appShader.cpp  appShader.hpp  appVertexBuffer.hpp  appVertexBufferLayout.cpp  appVertexBufferLayout.hpp  appVertexLayout.cpp  appVertexLayout.hpp  application.cpp  application.hpp  createDevice.cpp  createDevice.hpp  createInstance.cpp  createInstance.hpp  layoutType.hpp  requestAdapter.cpp  requestDevice.cpp
src/asset/: IAssetLoader.hpp  NATIVE_assetLoader.cpp  NATIVE_assetLoader.hpp  NATIVE_getBytes.cpp  NATIVE_getBytes.hpp  WEB_assetLoader.cpp  WEB_assetLoader.hpp  WEB_getBytes.cpp  WEB_getBytes.hpp  assetHandle.hpp  assetLoader.hpp  assetLoaderFactory.cpp  assetLoaderFactory.hpp  assetTypes.hpp  getBytes.hpp  loadGlb.cpp  loadGlb.hpp  modelParseError.hpp  readFileBytes.cpp  readFileBytes.hpp  task.hpp
src/demos/: loadModel.cpp
src/math/: ceilToBufferOffset.cpp  ceilToBufferOffset.hpp  constants.hpp  euler.cpp  euler.hpp
src/math/linalg/: mat2x2.cpp  mat2x2.hpp  mat3x3.cpp  mat3x3.hpp  mat4x4.cpp  mat4x4.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
src/window/: NATIVE_glfwWindow.cpp  NATIVE_glfwWindow.hpp  WEB_canvasWindow.cpp  WEB_canvasWindow.hpp  window.hpp
tests/: test.cpp
tests/Asset/: AssetManager.cpp
tests/Core/: JobSystem.cpp
tests/Matchers/: Vec4ApproxMatcher.hpp
tests/Math/: Euler.cpp
tests/Math/Linalg/: Mat2x2.cpp  Mat3x3.cpp  Mat4x4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
tests/matchers/: Vec4ApproxMatcher.hpp
tests/math/: euler.cpp
tests/math/linalg/: mat2x2.cpp  mat3x3.cpp  mat4x4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
tools/: build.py  cli.py
tools/build_scripts/: dawn.py  native.py  web.py
tools/codegen/: gen_sources.py
tools/server/: server.py
tools/shared/: constants.py
tools/utils/: cmd.py
